Bug 346729 r+sr=bryner Table cell selection is broken (get multiple copies on paste)